src.3/objects/Getting_Started__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Articles used as a quick start guide for features</description>
    <label>Get Started</label>
    <pluralLabel>Get Started</pluralLabel>
    <fields>
        <fullName>Set_up__c</fullName>
        <label>Set-up</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Video__c</fullName>
        <description>Add in the url of the video you would like to add</description>
        <inlineHelpText>Add in the url of the video you would like to add</inlineHelpText>
        <label>Video</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>What_is_it_for__c</fullName>
        <label>What is it for?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_s_next__c</fullName>
        <label>What&#39;s next?</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
</CustomObject>